# wgpu-tut-walkthrough

./: Cargo.toml  README.md
src/: main.rs  shader_frag.glsl  shader_frag2.glsl  shader_vert.glsl  shader_vert2.glsl
